<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LLogIn"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="522dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="209dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trave Booking Application"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Log In"
            android:textSize="35sp"
            android:textColor="#fff"
             />

        <EditText
            android:id="@+id/etUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPassWordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:password="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/Rememberme" />

            <TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ForgetPass"
                android:textColor="@color/blue500"
                android:textStyle="italic" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/blue500"
            android:layout_marginBottom="15dp"
            android:text="LOG IN" />
        <Button
            android:id="@+id/btnExit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/blue500"
            android:text="Exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Don't have an account?"
                android:textColor="@color/white"
                 />

            <TextView
                android:id="@+id/tvNavigateSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvSignIn"
                android:textColor="@color/blue500"
                android:textStyle="italic"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>